--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="content">Matt Smith</div>
+    Matt Smith
     <div class="social">
       <a href="https://twitter.com/AllThingsSmitty"><i class="fa fa-twitter fa-2"></i></a>
       <a href="https://github.com/AllThingsSmitty"><i class="fa fa-github fa-2"></i></a>
