Added viewport meta tag ⛵️

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <title>AllThingsSmitty</title>
+<meta name="viewport" content="width=device-width, initial=scale=1.0">
 <link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Slabo+27px">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <style>
 </style>
 </head>
 <body>
   <div class="container">
-     <h1>Matt Smith</h1>
+    <h1>Matt Smith</h1>
     <div class="social">
       <a href="https://twitter.com/AllThingsSmitty"><i class="fa fa-twitter fa-2"></i></a>
       <a href="https://github.com/AllThingsSmitty"><i class="fa fa-github fa-2"></i></a>
