Revised title and class names 👽

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>AllThingsSmitty</title>
+<title>Matt Smith</title>
 <meta name="viewport" content="width=device-width, initial=scale=1.0">
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
@@ -13,10 +13,10 @@
 <body>
   <div class="container">
     <h1>Matt Smith</h1>
-    <div class="social">
-      <a href="https://twitter.com/AllThingsSmitty"><i class="fa fa-twitter fa-2"></i></a>
-      <a href="https://github.com/AllThingsSmitty"><i class="fa fa-github fa-2"></i></a>
-      <a href="https://linkedin.com/in/AllThingsSmitty"><i class="fa fa-linkedin fa-2"></i></a>
+    <div class="social-icons">
+      <a href="https://twitter.com/AllThingsSmitty"><i class="fa fa-twitter"></i></a>
+      <a href="https://github.com/AllThingsSmitty"><i class="fa fa-github"></i></a>
+      <a href="https://linkedin.com/in/AllThingsSmitty"><i class="fa fa-linkedin"></i></a>
     </div>  
   </div>
 </body>
