Refactored for browser consistency 🏄🏽

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Matt Smith</h1>
+    <div class="name">
+      Matt Smith
+    </div>
     <div class="social-icons">
       <a href="https://twitter.com/AllThingsSmitty"><i class="fa fa-twitter"></i></a>
       <a href="https://github.com/AllThingsSmitty"><i class="fa fa-github"></i></a>
