--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 <meta charset="UTF-8">
 <title>Matt Smith</title>
 <meta name="viewport" content="width=device-width, initial=scale=1.0">
+<meta name="description" content="Matt Smith is a web developer, mobile strategist, and front-end astronaut based in Portland, Maine">
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Slabo+27px">
-<style>
-</style>
 </head>
 <body>
   <div class="container">
@@ -19,6 +18,7 @@
       <a href="https://twitter.com/AllThingsSmitty"><i class="fa fa-twitter"></i></a>
       <a href="https://github.com/AllThingsSmitty"><i class="fa fa-github"></i></a>
       <a href="https://linkedin.com/in/AllThingsSmitty"><i class="fa fa-linkedin"></i></a>
+      <a href="http://codepen.io/AllThingsSmitty"><i class="fa fa-codepen"></i></a>
     </div>  
   </div>
 </body>
