--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <a href="https://github.com/AllThingsSmitty"><i class="fa fa-github"></i></a>
       <a href="https://linkedin.com/in/AllThingsSmitty"><i class="fa fa-linkedin"></i></a>
       <a href="http://codepen.io/AllThingsSmitty"><i class="fa fa-codepen"></i></a>
+      <a href="http://AllThingsSmitty.tumblr.com"><i class="fa fa-tumblr"></i></a>
     </div>  
   </div>
   <script>
