Fixed font icons for accessibility ⛵️

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       Matt Smith
     </div>
     <div class="social-icons">
-      <a href="https://twitter.com/AllThingsSmitty"><i class="fa fa-twitter"></i></a>
-      <a href="https://github.com/AllThingsSmitty"><i class="fa fa-github"></i></a>
-      <a href="https://linkedin.com/in/AllThingsSmitty"><i class="fa fa-linkedin"></i></a>
-      <a href="http://codepen.io/AllThingsSmitty"><i class="fa fa-codepen"></i></a>
-      <a href="http://AllThingsSmitty.tumblr.com"><i class="fa fa-tumblr"></i></a>
+      <a href="https://twitter.com/AllThingsSmitty"><span class="fa fa-twitter"></span><span class="screen-reader-text">Follow me on Twitter</span></a>
+      <a href="https://github.com/AllThingsSmitty"><span class="fa fa-github"></span><span class="screen-reader-text">Follow me on GitHub</span></a>
+      <a href="https://linkedin.com/in/AllThingsSmitty"><span class="fa fa-linkedin"></span><span class="screen-reader-text">Follow me on LinkedIn</span></a>
+      <a href="http://codepen.io/AllThingsSmitty"><span class="fa fa-codepen"></span><span class="screen-reader-text">Follow me on CodePen</span></a>
+      <a href="http://AllThingsSmitty.tumblr.com"><span class="fa fa-tumblr"></span><span class="screen-reader-text">Follow me on Tumblr</span></a>
     </div>  
   </div>
   <script>
