--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Matt Smith</title>
+<title>Matt Smith - web developer, mobile strategist, and front-end astronaut</title>
 <meta name="viewport" content="width=device-width, initial=scale=1.0">
 <meta name="description" content="Matt Smith is a web developer, mobile strategist, and front-end astronaut based in Portland, Maine">
+<meta name="keywords" content="front-end development, web development, mobile web, responsive web design, user interface, UI, user experience, UX">
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Slabo+27px">
