--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>Matt Smith - web developer, mobile strategist, and front-end astronaut</title>
 <meta name="viewport" content="width=device-width, initial=scale=1.0">
-<meta name="description" content="Matt Smith is a web developer, mobile strategist, and front-end astronaut based in Portland, Maine">
-<meta name="keywords" content="front-end development, web development, mobile web, responsive web design, user interface, UI, user experience, UX">
+<meta name="description" content="Matt Smith is a web developer, mobile strategist, and front-end astronaut based in Portland, Maine, currently seeking opportunities in Silicon Valley">
+<meta name="keywords" content="front-end development, web development, mobile web, responsive web design, user interface, user experience, UI, UX">
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Slabo+27px">
@@ -21,7 +21,7 @@
       <a href="https://linkedin.com/in/AllThingsSmitty"><span class="fa fa-linkedin"></span><span class="screen-reader-text">Follow me on LinkedIn</span></a>
       <a href="http://codepen.io/AllThingsSmitty"><span class="fa fa-codepen"></span><span class="screen-reader-text">Follow me on CodePen</span></a>
       <a href="http://AllThingsSmitty.tumblr.com"><span class="fa fa-tumblr"></span><span class="screen-reader-text">Follow me on Tumblr</span></a>
-    </div>  
+    </div>
   </div>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
