--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <div class="name">
-      Matt Smith
+      <h1>Matt Smith</h1>
     </div>
     <div class="social-icons">
       <a href="https://twitter.com/AllThingsSmitty"><span class="fa fa-twitter"></span><span class="screen-reader-text">Follow me on Twitter</span></a>
