--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="description" content="Matt Smith is a web developer, mobile strategist, and front-end astronaut based in Portland, Maine, currently seeking opportunities in Silicon Valley">
 <meta name="keywords" content="front-end development, web development, mobile web, responsive web design, user interface, user experience, UI, UX">
 <link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Slabo+27px">
 </head>
 <body>
@@ -23,6 +23,21 @@
       <a href="http://AllThingsSmitty.tumblr.com"><span class="fa fa-tumblr"></span><span class="screen-reader-text">Follow me on Tumblr</span></a>
     </div>
   </div>
+  <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script>
+    // local fallback
+    (window.jQuery || document.write('<script src="js/jquery-1.12.2.min.js"><\/script>'));
+  </script>
+  <script>
+    (function ($) {
+      var $span = $('<span class="fa" style="display: none;"></span>').appendTo('body');
+      if ($span.css('fontFamily') !== 'FontAwesome') {
+        // local fallback
+        $('head').append('<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">');
+      }
+      $span.remove();
+    }(jQuery));
+  </script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
