Minified the CSS 💁🏼

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial=scale=1.0">
 <meta name="description" content="Matt Smith is a web developer, mobile strategist, and front-end astronaut based in Portland, Maine, currently seeking opportunities in Silicon Valley">
 <meta name="keywords" content="front-end development, web development, mobile web, responsive web design, user interface, user experience, UI, UX">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/main.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Slabo+27px">
 </head>
