--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
 <meta name="viewport" content="width=device-width, initial=scale=1.0">
 <meta name="description" content="Matt Smith is a web developer, mobile strategist, and front-end astronaut based in Portland, Maine, currently seeking opportunities in Silicon Valley">
 <meta name="keywords" content="front-end development, web development, mobile web, responsive web design, user interface, user experience, UI, UX">
-<link rel="stylesheet" href="css/main.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Slabo+27px">
 <script id="loadcss">
   (function(u,s){!function(e){'use strict';var n=function(n,t,o){var l,r=e.document,i=r.createElement('link');if(t)l=t;else{var a=(r.body||r.getElementsByTagName('head')[0]).childNodes;l=a[a.length-1]}var d=r.styleSheets;i.rel='stylesheet',i.href=n,i.media="only x",l.parentNode.insertBefore(i,t?l:l.nextSibling);var f=function(e){for(var n=i.href,t=d.length;t--;)if(d[t].href===n)return e();setTimeout(function(){f(e)})};return i.onloadcssdefined=f,f(function(){i.media=o||"all"}),i};'undefined'!=typeof module?module.exports=n:e.loadCSS=n}('undefined'!=typeof global?global:this);for(var i in u){loadCSS(u[i],s);}}(['css/main.min.css'],document.getElementById('loadcss')));
 </script>
@@ -19,6 +16,7 @@
   (window.jQuery || document.write('<script src="js/jquery-1.12.2.min.js"><\/script>'));
 </script>
 <script src="js/main.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="container">
@@ -33,7 +31,15 @@
       <a href="http://AllThingsSmitty.tumblr.com"><span class="fa fa-tumblr"></span><span class="screen-reader-text">Follow me on Tumblr</span></a>
     </div>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.24/webfontloader.js"></script>
   <script>
+    WebFont.load({
+      google: {
+        families: ['Slabo 27px:400']
+      }
+    });
+  </script>
+  <script>    
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
