--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script id="loadcss">
   (function(u,s){!function(e){'use strict';var n=function(n,t,o){var l,r=e.document,i=r.createElement('link');if(t)l=t;else{var a=(r.body||r.getElementsByTagName('head')[0]).childNodes;l=a[a.length-1]}var d=r.styleSheets;i.rel='stylesheet',i.href=n,i.media="only x",l.parentNode.insertBefore(i,t?l:l.nextSibling);var f=function(e){for(var n=i.href,t=d.length;t--;)if(d[t].href===n)return e();setTimeout(function(){f(e)})};return i.onloadcssdefined=f,f(function(){i.media=o||"all"}),i};'undefined'!=typeof module?module.exports=n:e.loadCSS=n}('undefined'!=typeof global?global:this);for(var i in u){loadCSS(u[i],s);}}(['css/main.min.css'],document.getElementById('loadcss')));
 </script>
-<noscript>&lt;link rel=stylesheet href=/css/main.min.css&gt;</noscript>
+<noscript>&lt;link rel="stylesheet" href="css/main.min.css"&gt;</noscript>
 <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
 <script>
   // local fallback
@@ -17,6 +17,7 @@
 </script>
 <script src="js/main.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+<noscript>&lt;link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"&gt;</noscript>
 </head>
 <body>
   <div class="container">
