--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 <meta name="viewport" content="width=device-width, initial=scale=1.0">
 <meta name="description" content="Matt Smith is a web developer, mobile strategist, and front-end astronaut based in Portland, Maine, currently seeking opportunities in Silicon Valley">
 <meta name="keywords" content="front-end development, web development, mobile web, responsive web design, user interface, user experience, UI, UX">
+<link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="img/favicons/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="img/favicons/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="img/favicons/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="img/favicons/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-96x96.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#f1f2f3">
+<meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
+<meta name="theme-color" content="#f1f2f3">
 <link rel="stylesheet" href="css/main.min.css">
 <script id="loadcss">
   (function(u,s){!function(e){'use strict';var n=function(n,t,o){var l,r=e.document,i=r.createElement('link');if(t)l=t;else{var a=(r.body||r.getElementsByTagName('head')[0]).childNodes;l=a[a.length-1]}var d=r.styleSheets;i.rel='stylesheet',i.href=n,i.media="only x",l.parentNode.insertBefore(i,t?l:l.nextSibling);var f=function(e){for(var n=i.href,t=d.length;t--;)if(d[t].href===n)return e();setTimeout(function(){f(e)})};return i.onloadcssdefined=f,f(function(){i.media=o||"all"}),i};'undefined'!=typeof module?module.exports=n:e.loadCSS=n}('undefined'!=typeof global?global:this);for(var i in u){loadCSS(u[i],s);}}(['css/main.min.css'],document.getElementById('loadcss')));
