--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <title>Matt Smith - web developer, mobile strategist, and front-end astronaut</title>
+<!--
+        _______________________
+        |                     | 
+        | OMG! Thanks for     |
+        | viewing the source. |
+        | You're awesome!     |
+        |________   __________|
+                 | /
+             __  |/
+            / _)
+     .-^^^-/ /
+  __/       /
+ <__.|_|-|_|
+
+-->
 <meta name="viewport" content="width=device-width, initial=scale=1.0">
 <meta name="description" content="Matt Smith is a web developer, mobile strategist, and front-end astronaut based in Portland, Maine, currently seeking opportunities in Silicon Valley">
 <meta name="keywords" content="front-end development, web development, mobile web, responsive web design, user interface, user experience, UI, UX">
@@ -20,7 +35,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-96x96.png">
 <link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileColor" content="#f1f2f3">
+<meta name="msapplication-TileColor" content="#2196f3">
 <meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
 <meta name="theme-color" content="#f1f2f3">
 <!-- inline critical path CSS -->
@@ -55,7 +70,7 @@
   <script>
     WebFont.load({
       google: {
-        families: ['Slabo 27px:400']
+        families: ['Slabo 27px: 400']
       }
     });
   </script>
