--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 <meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
 <meta name="theme-color" content="#f1f2f3">
 <!-- inline critical path CSS -->
-<style>body,html{height:100%;margin:0}html{background:#f1f2f3;-webkit-font-smoothing:antialiased}body{-webkit-align-items:center;align-items:center;color:#444;display:-webkit-flex;display:flex;-ms-flex-align:center;font-family:"Slabo 27px",sans-serif;font-size:16px;min-height:100%}main{margin:0 auto;text-align:center}div:first-child{border-bottom:1px solid #ccc;margin:0 0 .75em}h1{font-size:4em;font-weight:500;margin:0}div:last-child{font-size:2.5em}a{color:inherit;transition:ease .2s}a:focus{outline:dotted thin}a:hover{color:#2196f3}a span{margin:0 .25em}a span:last-child{clip:rect(1px,1px,1px,1px);height:1px;overflow:hidden;position:absolute;width:1px}@media only screen and (max-width:700px){h1{font-size:3.5em}div:last-child{font-size:2.1em}}@media only screen and (max-width:500px){h1{font-size:3em}div:last-child{font-size:1.8em}}</style>
+<style>
+  body,html{height:100%;margin:0}html{background:#f1f2f3;-webkit-font-smoothing:antialiased}body{-webkit-align-items:center;align-items:center;color:#444;display:-webkit-flex;display:flex;-ms-flex-align:center;font-family:"Slabo 27px",sans-serif;font-size:16px;min-height:100%}main{margin:0 auto;text-align:center}div:first-child{border-bottom:1px solid #ccc;margin:0 0 .75em}h1{font-size:4em;font-weight:500;margin:0}div:last-child{font-size:2.5em}a{color:inherit;transition:ease .2s}a:focus{outline:dotted thin}a:hover{color:#2196f3}a span{margin:0 .25em}a span:last-child{clip:rect(1px,1px,1px,1px);height:1px;overflow:hidden;position:absolute;width:1px}@media only screen and (max-width:700px){h1{font-size:3.5em}div:last-child{font-size:2.1em}}@media only screen and (max-width:500px){h1{font-size:3em}div:last-child{font-size:1.8em}}
+</style>
 <script id="loadcss">
   (function(u,s){!function(e){'use strict';var n=function(n,t,o){var l,r=e.document,i=r.createElement('link');if(t)l=t;else{var a=(r.body||r.getElementsByTagName('head')[0]).childNodes;l=a[a.length-1]}var d=r.styleSheets;i.rel='stylesheet',i.href=n,i.media="only x",l.parentNode.insertBefore(i,t?l:l.nextSibling);var f=function(e){for(var n=i.href,t=d.length;t--;)if(d[t].href===n)return e();setTimeout(function(){f(e)})};return i.onloadcssdefined=f,f(function(){i.media=o||"all"}),i};'undefined'!=typeof module?module.exports=n:e.loadCSS=n}('undefined'!=typeof global?global:this);for(var i in u){loadCSS(u[i],s);}}(['css/main.min.css'],document.getElementById('loadcss')));
 </script>
@@ -47,11 +49,11 @@
 <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
 <script>
   // local fallback
-  (window.jQuery || document.write('<script src="js/jquery-1.12.2.min.js"><\/script>'));
+  (window.jQuery || document.write('<script src="third-party/jquery-1.12.2.min.js"><\/script>'));
 </script>
 <script src="js/main.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
-<noscript><link rel=stylesheet href=font-awesome/css/font-awesome.min.css></noscript>
+<noscript><link rel=stylesheet href=third-party/font-awesome/css/font-awesome.min.css.css></noscript>
 </head>
 <body>
   <main role="main" tabindex="0">
