--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <__.|_|-|_|
 
 -->
-<meta name="viewport" content="width=device-width, initial=scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Matt Smith is a web developer, mobile strategist, and front-end astronaut based in Portland, Maine, currently seeking opportunities in Silicon Valley">
 <meta name="keywords" content="front-end development, web development, mobile web, responsive web design, user interface, user experience, UI, UX">
 <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
