Updated meta data 🚀

--- a/index.html
+++ b/index.html
@@ -3,24 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Matt Smith - web developer, mobile strategist, and front-end astronaut</title>
-<!--
-        _______________________
-        |                     | 
-        | OMG! Thanks for     |
-        | viewing the source. |
-        | You're awesome!     |
-        |________   __________|
-                 | /
-             __  |/
-            / _)
-     .-^^^-/ /
-  __/       /
- <__.|_|-|_|
-
--->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Matt Smith is a web developer, mobile strategist, and front-end astronaut based in Portland, Maine, currently seeking opportunities in Silicon Valley">
-<meta name="keywords" content="front-end development, web development, mobile web, responsive web design, user interface, user experience, UI, UX">
+<meta name="description" content="Matt Smith is a forward-thinking web developer who builds web applications to deliver engaging user experiences. He recognizes that users have diverse backgrounds and non-desktop expectations, and applies mobile-first principles to craft sophisticated user interfaces to accommodate different needs. As a usability expert, Matt is also able to analyze, strategize, and come up with conversion-driven tactics that meet business objectives with effective technical solutions. Matt believes in giving back to the web community and is an active contributor to several open-source projects. His most popular projects on GitHub, 'CSS Protips' and 'jQuery Tips Everyone Should Know', have been favorited by thousands of web professionals. As a developer advocate, Matt provides professional and technical guidance and strongly promotes emerging technologies with a holistic view.">
+<meta name="keywords" content="front-end development, web development, mobile web, responsive web design, user interface, user experience, UI, UX, accessibility">
 <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-icon-72x72.png">
