--- a/index.html
+++ b/index.html
@@ -44,6 +44,25 @@
       <a href="http://AllThingsSmitty.tumblr.com" rel="external"><span class="fa fa-tumblr"></span><span>Follow me on Tumblr</span></a>
     </div>
   </main>
+  <script type="text/javascript">
+    WebFontConfig = {
+      google: {
+        families: [ 'Slabo+27px::latin' ]
+      }
+    };
+    (function() {
+      var wf = document.createElement('script');
+      wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+        '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+      wf.type = 'text/javascript';
+      wf.async = 'true';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(wf, s);
+    })();
+  </script>
+  <noscript>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Slabo+27px">
+  </noscript>
   <script src="js/main.min.js"></script>
   <noscript><link rel=stylesheet href=css/main.min.css></noscript>
   <script>    
