--- a/index.html
+++ b/index.html
@@ -29,23 +29,25 @@
 <meta name="theme-color" content="#f1f2f3">
 <!-- inline critical path CSS -->
 <style>
-  @font-face{font-family:Slabo27px;src:url(fonts/Slabo27px-Regular.woff2) format("woff2"),url(fonts/Slabo27px-Regular.woff) format("woff"),url(fonts/Slabo27px-Regular.svg) format("svg"),url(fonts/Slabo27px-Regular.ttf) format("truetype"),url(fonts/Slabo27px-Regular.eot?) format("embedded-opentype")}*,:after,:before{box-sizing:border-box}:root{font-size:calc(1vw + 1vh + .25vmin)}body,html{height:100%;margin:0}html{background:#f1f2f3;-webkit-font-smoothing:antialiased}body{-webkit-align-items:center;align-items:center;color:#444;display:-webkit-flex;display:flex;-ms-flex-align:center;font:1em/1.25rem Slabo27px,sans-serif}main{margin:0 auto;text-align:center}div:first-child{border-bottom:1px solid #ccc}h1{font-size:4em;font-weight:500;margin:0 0 .5em}div:last-child{display:inline-table;font-size:2.5em;padding-top:.5em}a{color:inherit;margin:0 .5em;transition:ease .2s}a:first-child{margin-left:0}a:last-child{margin-right:0}a:focus{outline:dotted thin}a:hover{color:#2196f3}a span:last-child{clip:rect(1px,1px,1px,1px);max-height:1px;max-width:1px;overflow:hidden;position:absolute}@media only screen and (max-width:800px){body{font-size:1.3em;line-height:1.6rem}}@media only screen and (max-width:500px){body{font-size:1.15em;line-height:1.4rem}}@font-face{font-family:FontAwesome;src:url(third-party/font-awesome/fonts/fontawesome-webfont.eot?v=4.5.0);src:url(third-party/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.5.0) format('embedded-opentype'),url(third-party/font-awesome/fonts/fontawesome-webfont.woff2?v=4.5.0) format('woff2'),url(third-party/font-awesome/fonts/fontawesome-webfont.woff?v=4.5.0) format('woff'),url(third-party/font-awesome/fonts/fontawesome-webfont.ttf?v=4.5.0) format('truetype'),url(third-party/font-awesome/fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular) format('svg');font-weight:400;font-style:normal}.fa{display:inline-block;font:normal normal normal 14px/1 FontAwesome;font-size:inherit;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.fa-twitter:before{content:"\f099"}.fa-github:before{content:"\f09b"}.fa-linkedin:before{content:"\f0e1"}.fa-tumblr:before{content:"\f173"}.fa-codepen:before{content:"\f1cb"}
+  @font-face{font-family:Slabo27px;src:url(fonts/Slabo27px-Regular.woff2) format("woff2"),url(fonts/Slabo27px-Regular.woff) format("woff"),url(fonts/Slabo27px-Regular.svg) format("svg"),url(fonts/Slabo27px-Regular.ttf) format("truetype"),url(fonts/Slabo27px-Regular.eot?) format("embedded-opentype")}*,:after,:before{box-sizing:border-box}:root{font-size:calc(1vw + 1vh + .25vmin)}body,html{height:100%;margin:0}html{background:#f1f2f3;-webkit-font-smoothing:antialiased}body{-webkit-align-items:center;align-items:center;color:#444;display:-webkit-flex;display:flex;-ms-flex-align:center;font:1em/1.25rem Slabo27px,sans-serif}main{margin:0 auto;text-align:center}h1{font-size:4em;font-weight:500;line-height:1em;margin:0}hr{background:#ccc;border:none;height:1px}div:last-child{display:inline-table;font-size:2.5em;padding:.3em 0}a{color:inherit;margin:0 .5em;transition:ease .2s}a:first-child{margin-left:0}a:last-child{margin-right:0}a:focus{outline:dotted thin}a:hover{color:#2196f3}a span:last-child{clip:rect(1px,1px,1px,1px);max-height:1px;max-width:1px;overflow:hidden;position:absolute}.animated{animation-duration:1s;animation-fill-mode:both}@keyframes fadeInUp{0%{opacity:0;transform:translateY(20px)}100%{opacity:1;transform:translateY(0)}}.fadeInUp{animation-name:fadeInUp}@keyframes fadeInDown{0%{opacity:0;transform:translateY(-20px)}100%{opacity:1;transform:translateY(0)}}.fadeInDown{animation-name:fadeInDown}@media only screen and (max-width:800px){body{font-size:1.3em;line-height:1.6rem}}@media only screen and (max-width:500px){body{font-size:1.15em;line-height:1.4rem}}
+  
 </style>
 <script id="loadcss">
   (function(u,s){!function(e){'use strict';var n=function(n,t,o){var l,r=e.document,i=r.createElement('link');if(t)l=t;else{var a=(r.body||r.getElementsByTagName('head')[0]).childNodes;l=a[a.length-1]}var d=r.styleSheets;i.rel='stylesheet',i.href=n,i.media="only x",l.parentNode.insertBefore(i,t?l:l.nextSibling);var f=function(e){for(var n=i.href,t=d.length;t--;)if(d[t].href===n)return e();setTimeout(function(){f(e)})};return i.onloadcssdefined=f,f(function(){i.media=o||"all"}),i};'undefined'!=typeof module?module.exports=n:e.loadCSS=n}('undefined'!=typeof global?global:this);for(var i in u){loadCSS(u[i],s);}}(['css/main.min.css'],document.getElementById('loadcss')));
 </script>
 <noscript>
-  <link rel="stylesheet" href=css/main.min.css>
+  <link rel="stylesheet" href="css/main.min.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Slabo+27px">
   <link rel="stylesheet" href="third-party/font-awesome/css/font-awesome.min.css">
 </noscript>
 </head>
 <body>
   <main role="main" tabindex="0">
-    <div>
+    <div class="animated fadeInDown">
       <h1>Matt Smith</h1>
     </div>
-    <div>
+    <hr>
+    <div class="animated fadeInUp">
       <a href="https://twitter.com/AllThingsSmitty" rel="external"><span class="fa fa-twitter"></span><span>Follow me on Twitter</span></a>
       <a href="https://github.com/AllThingsSmitty" rel="external"><span class="fa fa-github"></span><span>Follow me on GitHub</span></a>
       <a href="https://linkedin.com/in/AllThingsSmitty" rel="external"><span class="fa fa-linkedin"></span><span>Follow me on LinkedIn</span></a>
