Prioritized above-the-fold content 👏🏼

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Matt Smith is a forward-thinking web developer based in Portland, Maine who builds web applications to deliver engaging user experiences. He recognizes that users have diverse backgrounds and non-desktop expectations, and applies mobile-first principles to craft sophisticated user interfaces to accommodate different needs. As a usability expert, Matt is also able to analyze, strategize, and come up with conversion-driven tactics that meet business objectives with effective technical solutions. Matt believes in giving back to the web community and is an active contributor to several open-source projects. His most popular projects on GitHub, 'CSS Protips' and 'jQuery Tips Everyone Should Know', have been favorited by thousands of web professionals. As a developer advocate, Matt provides professional and technical guidance and strongly promotes emerging technologies with a holistic view.">
 <meta name="keywords" content="web development, front-end development, mobile web, responsive web design, user interface, user experience, UI, UX, web accessibility">
+<style>
+  .icons{display:inline-table;font-size:2.5em;padding:.25em 0}.fa,.icons li{display:inline-block}.icons ul{margin:0;padding:0}.icons li{height:1.15em;list-style:none;margin:0 .25em;width:1.15em}.icons li:first-child{margin-left:0}.icons li:last-child{margin-right:0}.icons a{color:inherit}.icons a span:last-child{clip:rect(1px,1px,1px,1px);max-height:1px;max-width:1px;overflow:hidden;position:absolute}
+</style>
 <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-icon-72x72.png">
