Added data attribute for tooltip 😎

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     <hr>
     <div class="icons animated fadeInUp">
       <ul>
-        <li><a href="https://twitter.com/AllThingsSmitty" rel="external"><span class="fa fa-twitter"></span><span>Follow me on Twitter</span></a></li>
-        <li><a href="https://github.com/AllThingsSmitty" rel="external"><span class="fa fa-github"></span><span>Follow me on GitHub</span></a></li>
-        <li><a href="https://linkedin.com/in/AllThingsSmitty" rel="external"><span class="fa fa-linkedin"></span><span>Follow me on LinkedIn</span></a></li>
-        <li><a href="http://codepen.io/AllThingsSmitty" rel="external"><span class="fa fa-codepen"></span><span>Follow me on CodePen</span></a></li>
-        <li><a href="http://AllThingsSmitty.tumblr.com" rel="external"><span class="fa fa-tumblr"></span><span>Follow me on Tumblr</span></a></li>
+        <li><a href="https://twitter.com/AllThingsSmitty" rel="external" class="tooltip" data-tooltip="Follow me on Twitter"><span class="fa fa-twitter"></span><span>Follow me on Twitter</span></a></li>
+        <li><a href="https://github.com/AllThingsSmitty" rel="external" class="tooltip" data-tooltip="Follow me on GitHub"><span class="fa fa-github"></span><span>Follow me on GitHub</span></a></li>
+        <li><a href="https://linkedin.com/in/AllThingsSmitty" rel="external" class="tooltip" data-tooltip="Follow me on LinkedIn"><span class="fa fa-linkedin"></span><span>Follow me on LinkedIn</span></a></li>
+        <li><a href="http://codepen.io/AllThingsSmitty" rel="external" class="tooltip" data-tooltip="Follow me on CodePen"><span class="fa fa-codepen"></span><span>Follow me on CodePen</span></a></li>
+        <li><a href="http://AllThingsSmitty.tumblr.com" rel="external" class="tooltip" data-tooltip="Follow me on Tumblr"><span class="fa fa-tumblr"></span><span>Follow me on Tumblr</span></a></li>
       </ul>
     </div>
   </main>
