--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="web development, front-end development, mobile web, responsive web design, user interface, user experience, UI, UX, web accessibility">
 <!-- inline critical path CSS -->
 <style>
-  *,:after,:before,html{box-sizing:border-box}html{background:#f1f2f3;-webkit-font-smoothing:antialiased}body,div,html{margin:0;padding:0}h1{font-weight:400}@font-face{font-family:Slabo27px;src:url(css/fonts/Slabo27px-Regular.woff2) format("woff2"),url(css/fonts/Slabo27px-Regular.woff) format("woff")}:root{font-size:calc(1vw + 1vh + .25vmin)}body,html{height:100%;margin:0}body{-webkit-align-items:center;align-items:center;color:#444;display:-webkit-flex;display:flex;-ms-flex-align:center;font:1em/1.25rem Slabo27px,sans-serif}main{margin:0 auto;text-align:center}h1{font-size:4em;line-height:1em;margin:0}hr{background:#ccc;border:none;height:1px}.icons{display:inline-table;font-size:2.5em;padding:.25em 0}.fa,.icons li{display:inline-block}.icons ul{margin:0;padding:0}.icons li{height:1.15em;list-style:none;margin:0 .25em;width:1.15em}.icons li:first-child{margin-left:0}.icons li:last-child{margin-right:0}.icons a{color:inherit}.icons a span:last-child{clip:rect(1px,1px,1px,1px);max-height:1px;max-width:1px;overflow:hidden;position:absolute}@media only screen and (max-width:800px){body{font-size:1.3em;line-height:1.6rem}}@media only screen and (max-width:500px){body{font-size:1.15em;line-height:1.4rem}}@font-face{font-family:FontAwesome;src:url(/third-party/font-awesome/fonts/fontawesome-webfont.eot?v=4.5.0);src:url(/third-party/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.5.0) format("embedded-opentype"),url(/third-party/font-awesome/fonts/fontawesome-webfont.woff2?v=4.5.0) format("woff2"),url(/third-party/font-awesome/fonts/fontawesome-webfont.woff?v=4.5.0) format("woff"),url(/third-party/font-awesome/fonts/fontawesome-webfont.ttf?v=4.5.0) format("truetype"),url(/third-party/font-awesome/fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular) format("svg");font-weight:400;font-style:normal}.fa{font:normal normal normal 14px/1 FontAwesome;font-size:inherit;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;text-rendering:auto}.fa-twitter:before{content:"\f099"}.fa-github:before{content:"\f09b"}.fa-linkedin:before{content:"\f0e1"}.fa-tumblr:before{content:"\f173"}.fa-codepen:before{content:"\f1cb"}
+  *,:after,:before,html{box-sizing:border-box}html{background:#f1f2f3;-webkit-font-smoothing:antialiased}body,div,html{margin:0;padding:0}h1{font-weight:400}@font-face{font-family:Slabo27px;src:url(css/fonts/Slabo27px-Regular.woff2) format("woff2"),url(css/fonts/Slabo27px-Regular.woff) format("woff")}:root{font-size:calc(1vw + 1vh + .25vmin)}body,html{height:100%;margin:0}body{-webkit-align-items:center;align-items:center;color:#444;display:-webkit-flex;display:flex;-ms-flex-align:center;font:1em/1.25rem Slabo27px,sans-serif}main{margin:0 auto;text-align:center}h1{font-size:4em;line-height:1em;margin:0}hr{background:#ccc;border:none;height:1px}.icons{display:inline-table;font-size:2.5em;padding:.25em 0}.fa,.icons li{display:inline-block}.icons ul{margin:0;padding:0}.icons li{height:1.15em;list-style:none;margin:0 .25em;width:1.15em}.icons li:first-child{margin-left:0}.icons li:last-child{margin-right:0}.icons a{color:inherit}.icons a span:last-child{clip:rect(1px,1px,1px,1px);max-height:1px;max-width:1px;overflow:hidden;position:absolute}@media only screen and (max-width:800px){body{font-size:1.3em;line-height:1.6rem}}@media only screen and (max-width:500px){body{font-size:1.15em;line-height:1.4rem}}@media only screen and (min-width:800px){[class^=tooltip]{position:relative}.tooltip:before,[class^=tooltip]:after{left:50%;opacity:0;position:absolute;transform:translateX(-50%) translateY(-2px)}[class^=tooltip]:after{background:#2196f3;border-radius:2px;color:#fff;content:attr(data-tooltip);font-size:1rem;padding:5px 10px;top:3em;white-space:nowrap;z-index:2}.tooltip:before{content:"";height:0;top:24px;width:5em;z-index:3}}@font-face{font-family:FontAwesome;src:url(third-party/font-awesome/fonts/fontawesome-webfont.eot?v=4.5.0);src:url(third-party/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.5.0) format("embedded-opentype"),url(third-party/font-awesome/fonts/fontawesome-webfont.woff2?v=4.5.0) format("woff2"),url(third-party/font-awesome/fonts/fontawesome-webfont.woff?v=4.5.0) format("woff"),url(third-party/font-awesome/fonts/fontawesome-webfont.ttf?v=4.5.0) format("truetype"),url(third-party/font-awesome/fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular) format("svg");font-weight:400;font-style:normal}@font-face{font-family:FontAwesome;src:url(third-party/font-awesome/fonts/fontawesome-webfont.eot?third-party/fonts/fontawesome-webfont.ttf?v=4.5.0) format("truetype"),url(third-party/font-awesome/fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular) format("svg");font-weight:400;font-style:normal}.fa{font:normal normal normal 14px/1 FontAwesome;font-size:inherit;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.fa-twitter:before{content:"\f099"}.fa-github:before{content:"\f09b"}.fa-linkedin:before{content:"\f0e1"}.fa-tumblr:before{content:"\f173"}.fa-codepen:before{content:"\f1cb"}  
 </style>
 <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-icon-60x60.png">
@@ -56,24 +56,8 @@
       </ul>
     </div>
   </main>
-  <script src="js/main.min.js"></script>
   <script src="js/fontfaceobserver.min.js"></script>
-  <script>
-    (function (w) {
-      if (w.document.documentElement.className.indexOf('fonts-loaded') > -1) {
-        return;
-      }
-      var slabo = new w.FontFaceObserver('Slabo27px', {
-        weight: 500
-      });
-
-      w.Promise
-        .all([slabo.check()])
-        .then(function () {
-          w.document.documentElement.className += ' fonts-loaded';
-        });
-    }(this));
-  </script>
+  <script src="js/main.min.js"></script>
   <script>    
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
