--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@ title: Home
 <div class="footnotes">
   <ol>
     <li id="fn:fn-footnote">
-      <p>Quoting the great philosopher <a href="https://en.wikipedia.org/wiki/Beck" rel="external">Beck</a>. <a href="#fnref:fn-footnote" class="reversefootnote">↩</a></p>
+      <p>Quoting the great philosopher <a href="https://en.wikipedia.org/wiki/Beck" rel="external">Beck</a>. <a href="#fnref:fn-footnote" aria-label="Back to content" class="reversefootnote">↩</a></p>
     </li>
   </ol>
 </div>
-
 
 <script id="dsq-count-scr" src="//allthingssmitty-com.disqus.com/count.js" async></script>
