--- a/404.html
+++ b/404.html
@@ -6,5 +6,5 @@ permalink: 404.html
 
 <div class="page">
   <h1 class="page-title">{{ page.title }}</h1>
-  <p class="lead">Whoops! It looks like that URL was misplaced or no longer exists. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again.</p>
+  <p class="lead">Whoops! The URL you&rsquo;re looking for was misplaced or no longer exists. 😱 Not to worry, there&rsquo;s <a href="{{ site.baseurl }}/">more good content</a> to check out.</p>
 </div>
