--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Home
         <span class="fa fa-tags"></span>
         <ul>
           {% for tag in post.tags %}
-            <li><a href="/tags#{{ tag }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
+            <li><a href="/tags#{{ tag | url_encode }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
           {% endfor %}
         </ul>
       </div>
