--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Home
     <p>{{ post.content | strip_html | truncatewords:50 }}</p>
     
     <div class="more">
-      <a href="{{ post.url }}">Read more</a>
+      <a href="{{ post.url }}">Read more...</a>
     </div>
     
     {% if forloop.last == false %}<hr>{% endif %}
