--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: "404: Page not found"
+title: "Page not found 😱"
 permalink: 404.html
 ---
 
 <div class="page">
   <h1 class="page-title">{{ page.title }}</h1>
-  <p class="lead">Whoops! The URL you&rsquo;re looking for was misplaced or no longer exists. 😱 Not to worry, there&rsquo;s <a href="{{ site.baseurl }}/">more good content</a> to check out.</p>
+  <p class="lead">Whoops! The page you&rsquo;re looking for was misplaced or no longer exists. Not to worry, there&rsquo;s <a href="{{ site.baseurl }}/">more good content</a> to check out.</p>
 </div>
