Added Unicode and ARIA

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Page not found 😱"
+title: "Page not found <span aria-label='face screaming in face'>&#x1f631;</span>"
 permalink: 404.html
 ---
 
