Added ARIA role

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Page not found <span aria-label='face screaming in fear'>&#x1f631;</span>"
+title: "Page not found <span role='img' aria-label='face screaming in fear'>&#x1f631;</span>"
 permalink: 404.html
 ---
 
