--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: "Page not found <span role='img' aria-label='face screaming in fear'>&#x1f631;</span>"
+title: "Page not found"
 permalink: 404.html
 ---
 
 <div class="page">
-  <h3 class="page-title">{{ page.title }}</h3>
+  <h3 class="page-title">Page not found <span role='img' aria-label='face screaming in fear'>&#x1f631;</span></h3>
   <p class="lead">Whoops! The page you&rsquo;re looking for was misplaced or no longer exists. Not to worry, there&rsquo;s <a href="{{ site.baseurl }}/">more good content</a> to check out.</p>
 </div>
