--- a/HelloAnalytics.html
+++ b/HelloAnalytics.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Hello Analytics Reporting API V4</title>
+---
+layout: default
+title: Hello Analytics Reporting API V4
+---
+
+
+
   <meta name="google-signin-client_id" content="808669922339-h2h8amuji1epsom8m6haat5qcpv92rdc.apps.googleusercontent.com">
   <meta name="google-signin-scope" content="https://www.googleapis.com/auth/analytics.readonly">
-</head>
-<body>
+
+
 
 <h1>Hello Analytics Reporting API V4</h1>
 
@@ -56,5 +58,3 @@
 <!-- Load the JavaScript API client and Sign-in library. -->
 <script src="https://apis.google.com/js/client:platform.js"></script>
 
-</body>
-</html>
