--- a/404.html
+++ b/404.html
@@ -5,6 +5,6 @@ permalink: 404.html
 ---
 
 <div class="page">
-  <h2 class="page-title">Whoops! <span role="img" aria-label="confused face">&#x1F61F;</span></h2>
+  <h2 class="page-title">Whoops! <span role="img" aria-label="emoji confused face">&#x1F61F;</span></h2>
   <p class="intro">It looks like the page you want was misplaced or no longer exists. Not to worry, there's <a href="{{ site.baseurl }}/">more good content</a> to check out.</p>
 </div>
