--- a/404.html
+++ b/404.html
@@ -6,5 +6,5 @@ permalink: 404.html
 
 <div class="page">
   <h2 class="page-title">Whoops! <span role="img" aria-label="emoji face with monocle">&#x1F9D0;</span></h2>
-  <p>It looks like the page you want was misplaced or no longer exists. Not to worry, there's <a href="{{ site.baseurl }}/">more good content</a> to check out.</p>
+  <p>It looks like the page you want isn't there. Not to worry, there's <a href="{{ site.baseurl }}/">more good content</a> to check out.</p>
 </div>
