--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Home
       </header>
       <div class="flow">
         <p>{{ post.content | strip_html | truncatewords:50 }}</p>
-        <p><a href="{{ post.url }}" class="more" aria-label="Read more of '{{ post.title }}'">Read more</a></p>
+        <p><a href="{{ post.url }}" aria-label="Read more of '{{ post.title }}'">Read more</a></p>
       </div>
     </div>
     {% if forloop.last == false %}<div class="border-rule"></div>{% endif %}
